--- a/package.json
+++ b/package.json
@@ -9,24 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.1",
     "@expo/vector-icons": "^15.0.3",
     "@magic-ext/react-native-expo-oauth": "^30.3.1",
     "@magic-sdk/react-native-expo": "^34.2.1",
+    "@polymarket/builder-relayer-client": "^0.0.8",
+    "@polymarket/builder-signing-sdk": "^0.0.8",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^12.0.1",
     "@react-navigation/bottom-tabs": "^7.14.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.13.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~54.0.10",
+    "base64-js": "^1.5.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "ethers": "^5.7.2",
+    "events": "^3.3.0",
     "expo": "~54.0.33",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "^18.0.13",
+    "expo-crypto": "~15.0.8",
     "expo-linking": "^8.0.11",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-crypto": "^2.2.1",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-randombytes": "^3.6.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "^13.16.0",
+    "stream-browserify": "^3.0.0",
+    "viem": "^2.46.2"
   },
   "private": true
 }
